--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -157,11 +157,15 @@ h1{
 }
 
 .profile__img{
-    max-width: 100%;
-    width: 700px;
+    max-width: 80%;
+    width: 300px;
+    border-radius: 8px;
 }
 
 .profile__img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     max-height: 500px;
     overflow: hidden;
 }
@@ -223,7 +227,7 @@ h1{
         flex-direction: row;
         padding: 20px;
         background-color: transparent;
-        height: 90vh;
+        height: 80vh;
         margin: auto;
     }
 
@@ -253,11 +257,13 @@ h1{
     .profile__img-container{
         max-height: initial;
         border-radius: 25px 0 0 25px;
+        
     }
     .profile__img{
         height: 100%;
         object-fit: cover;
-        width: 620px;
+        object-position: center;
+        width: 800px;
     }
 }
 
